test/Feature/Output/consecutive_divide_by_zero.c.tmp.klee-out/test000003.pc
array divisor1[4] : w32 -> w8 = symbolic
array divisor2[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 (ReadLSB w32 0 divisor1)))
         (Eq 0
             (ReadLSB w32 0 divisor2))]
        false)
